k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-demo
  labels:
    name: ecommerce-demo
    dynatrace: "true"
    environment: "demo"
